# git-commit-message-generator

./: .gitignore  README.md  README_KOR.md  REAME_KOR.md  build.sh  main.py  prompt_template.yml  pyproject.toml  release.sh  requirements.txt
.github/workflows/: release.yml
commitgen/: config.py  generator.py  gitdiff.py
